# alfred-sequential-number

./: AI_CONTEXT.md  Makefile  README-jp.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: file-map.md  specification.md  ui-design.md
docs/dev-charter/: MONETIZATION_POLICY.md
src/app/: core.py
src/app/commands/: seq_cmd.py
tests/: test_commands.py  test_services.py
workflow/: filter.py  info.plist  run.py  seq.py
