[project]
name = "alfred-sequential-number"
version = "1.0.0"
description = "Alfred workflow to generate sequential numbers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# Runtime dependencies - also add to requirements.txt for vendor install
dependencies = []

[project.urls]
Homepage = "https://github.com/y-marui/alfred-sequential-number"
Repository = "https://github.com/y-marui/alfred-sequential-number"
"Bug Tracker" = "https://github.com/y-marui/alfred-sequential-number/issues"
Changelog = "https://github.com/y-marui/alfred-sequential-number/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
# Install dev extras via: uv sync --extra dev

[tool.setuptools.packages.find]
# Packages are under src/ - explicit config avoids flat-layout auto-discovery issues
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff - linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
    "ARG",  # unused arguments
    "BLE",  # blind except
    "PTH",  # pathlib usage
    "RUF",  # ruff-specific
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "ARG", "N802"]
# seq.py is ported from the reference implementation; keep names as-is
"workflow/seq.py" = ["N801", "N802", "ANN001", "ANN201", "ANN002", "UP028"]

# ---------------------------------------------------------------------------
# Ruff formatter (replaces black)
# ---------------------------------------------------------------------------
[tool.ruff.format]
# Use double quotes, same as black defaults
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
mypy_path = "src"
strict = true

# Override per third-party library rather than globally suppressing.
# Add entries here when vendoring a library that has no type stubs.
[[tool.mypy.overrides]]
module = [
    "seq",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests requiring external services",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
